[tool.poetry]
name = "mistral-hackathon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
watchdog = "^5.0.3"
streamlit-notifications = {git = "https://github.com/yunisguliyev/streamlit-notifications.git"}
streamlit-push-notifications = "^0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
