[tool.poetry]
name = "mistral-hackathon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
watchdog = "^5.0.3"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
streamlit-authenticator = "^0.4.1"
langchain = "^0.3.2"
xkcd = "^2.4.2"
gnews = "^0.3.7"
python-weather = "^2.0.4"
tflunifiedapi = "^0.2.1"
tfl = "^3.9"
flask = "^3.0.3"
langchain-mistralai = "^0.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
